Fixed properties table overflow.

--- a/src/app/map/map-properties/map-properties.component.scss
+++ b/src/app/map/map-properties/map-properties.component.scss
@@ -1,3 +1,7 @@
+.featuresTable {
+  overflow: auto;
+}
+
 nz-collapse-panel {
   overflow-y: auto;
 }
